k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: did-solution-backend
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: app-did-solution-backend
  template:
    metadata:
      labels:
        app: app-did-solution-backend
    spec:
      containers:
        - name: did-solution-backend
          image: "docker-registry.bosh/did-solution-backend:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
