k8/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: did-solution-backend
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - devsolutionbackend.lemonaidsinglexdev.com
    secretName: tls-secret-devsolutionbackend
  rules:
    - host: devsolutionbackend.lemonaidsinglexdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: did-solution-backend
                port: 
                  name: http
